--- a/2020.12.09FinalWriteup.md
+++ b/2020.12.09FinalWriteup.md
@@ -100,9 +100,10 @@ modelling exercises within a broader experimental structure as follows:
 
 FIGURE 1. MODEL APPROACH
 
-![](./images/media/image11.png){width="4.458333333333333in"
+<!-- ![](./images/media/image11.png){width="4.458333333333333in"
 height="2.1770833333333335in"}![](./images/media/image3.png){width="1.5041590113735783in"
-height="0.520670384951881in"}
+height="0.520670384951881in"} -->
+![](./images/media/figure1.png)
 
 #### DIMENSIONALITY REDUCTION METHODS
 
@@ -162,7 +163,7 @@ LinearSVM, RF). The results of these models are detailed in figure 2
 below.
 
 FIGURE 2. SUMMARY OF PERFORMANCE & MODEL PARAMETERS
-
+<!-- 
 +---------+---------+---------+---------+---------+---------+---------+
 | **      | **PIT** | *       |         |         |         |         |
 | Feature |         | *CAGR** |         |         |         |         |
@@ -228,7 +229,8 @@ FIGURE 2. SUMMARY OF PERFORMANCE & MODEL PARAMETERS
 |         |         |         |         |         |         |         |
 | Rando   |         |         |         |         |         |         |
 | mForest |         |         |         |         |         |         |
-+---------+---------+---------+---------+---------+---------+---------+
++---------+---------+---------+---------+---------+---------+---------+ -->
+![](./images/media/figure2.png)
 
 PART 1: POINT-IN-TIME (PIT) MODELS
 
@@ -395,12 +397,13 @@ see fit.
 ### APPENDIX
 
 FIGURE 1. BREAKDOWN OF CENSUS DATA FEATURES
-
+<!-- 
   **Feature category**   **Breakdown of features**
   ---------------------- -----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
   Housing                Number of bedrooms, gross rent, heat type, occupancy, tenure, mortgage status, mobility, housing costs, units in structure, value, year built
   Demographic            Disability status, educational attainment, births, family type/members, race, marital status, place of birth, school enrollment, sex, age, citizenship status, vehicles availible
-  Economic               Class of worker, commute to work, employment status, health insurance coverage, income and benefits, industry, occupation
+  Economic               Class of worker, commute to work, employment status, health insurance coverage, income and benefits, industry, occupation -->
+  ![](./images/media/appendixFigure1.png)
 
 FIGURE 2. PIT BASELINE LEARNING CURVES
 
@@ -456,7 +459,7 @@ height="1.28in"}
 ![](./images/media/image9.png){width="3.2in" height="1.28in"}
 
 FIGURE 8. MOST COMMON PREDICTORS (+/-) FOR HIGH, MEDIUM, AND LOW GROWTH
-
+<!-- 
   **HIGH GROWTH**     
   ------------------- -------------------------------------------------------------------------------------------
   Positive Feature    Percent!!UNITS IN STRUCTURE!!Total housing units!!5 to 9 units_15\'
@@ -468,4 +471,5 @@ FIGURE 8. MOST COMMON PREDICTORS (+/-) FOR HIGH, MEDIUM, AND LOW GROWTH
                       
   **LOW GROWTH**      
   Positive Feature    Percent!!VALUE!!Owner-occupied units!!\$100,000 to \$149,999_15\'
-  Negative Feature    Percent!!UNITS IN STRUCTURE!!Total housing units!!5 to 9 units_15\'
+  Negative Feature    Percent!!UNITS IN STRUCTURE!!Total housing units!!5 to 9 units_15\' -->
+![](./images/media/appendixFigure8.png)
